sensorserver/manifests/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensorserver
  labels:
    app: sensorserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensorserver
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: sensorserver
    spec:
      containers:
        - name: sensorserver
          image: bisry/earlyvet-sensorserver
          ports:
            - containerPort: 5004
