sensorserver/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sensorserver
spec:
  selector:
    app: sensorserver
  type: ClusterIP
  ports:
    - port: 5004
      targetPort: 5004
      protocol: TCP
